# nellie

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  config.example.yaml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: search_benchmark.rs  structural_bench.rs
bootstrap/lessons/: 01-use-search-hybrid.md  02-save-checkpoints-with-graph.md  03-inject-auto-surfaces.md  04-session-protocol.md  05-severity-matters.md  06-checkpoint-resume.md  07-graph-queries.md  08-index-your-repos.md
docs/: USAGE_GUIDE.md  claude-md-snippet.md
examples/: soak.rs
packaging/: install-local.sh  install-private.sh  install-universal.sh  nellie.conf  nellie.service  setup-ubuntu.sh
packaging/hooks/: README.md
packaging/macos/: com.nellie-rs.server.plist  com.nellie.server.plist  install-macos.sh  migrate-from-python.sh
scripts/: nellie-session-start.sh
src/: bootstrap.rs  lib.rs  main.rs  setup.rs
src/claude_code/: daemon.rs  dedup.rs  extractor.rs  hooks.rs  ingest.rs  inject.rs  mappers.rs  memory_index.rs  memory_writer.rs  mod.rs  paths.rs  remote.rs  rules.rs  sync.rs  transcript.rs  util.rs
src/config/: mod.rs  settings.rs
src/embeddings/: mod.rs  version.rs  worker.rs
src/graph/: bootstrap.rs  enrichment.rs  entities.rs  integrity.rs  matching.rs  memory.rs  mod.rs  persistence.rs  query.rs
src/server/: api.rs  app.rs  mcp.rs  mcp_transport.rs  metrics.rs  mod.rs  observability.rs  rest.rs  sse.rs  ui.rs
src/storage/: checkpoints.rs  lessons.rs  mod.rs  models.rs  schema.rs
src/structural/: extractor.rs  graph_builder.rs  language.rs  mod.rs  parser.rs  storage.rs
src/structural/extractors/: go.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
src/watcher/: filter.rs  indexer.rs  mod.rs  scanner.rs
static/: checkpoints.html  files.html  graph.html  index.html  lessons.html  metrics.html  search.html  style.css
tests/: deep_hooks_daemon_integration.rs  deep_hooks_smoke_test.sh  e2e-remote.sh  e2e-structural.sh  hooks_integration.rs  ingest_integration.rs  load_test.rs  orbstack-install-test.sh  orbstack-reset.sh  soak_test.rs  sync_budget_integration.rs  watcher_integration.rs
